# Email-Spam-Classifier

./: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  emails.csv.dvc  params.yaml  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml
email_spam_classification/: data_cleaning.py  data_ingestion.py  feature_engineering.py  model_building.py  model_evaluation.py
flask_app/: app.py  requirements-app.txt  requirements.txt
flask_app/templates/: index.html
models/: .gitignore
tests/: test_flask_app.py  test_model.py
utils/: requirements-utils.txt  text_cleaner.py
