[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "email_spam_classification"
version = "0.0.1"
description = "The project aims to perform natural language processing and classify the emails as either spam or not spam."
authors = [
  { name = "Jaswanth Mada" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["email_spam_classification"]
include = ["pyproject.toml", "email_spam_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["email_spam_classification"]
force-sort-within-sections = true

